--- a/LC/style.css
+++ b/LC/style.css
@@ -51,7 +51,7 @@ nav img{
 	width: 90%;
 	color: #fff;
 	position:absolute;
-	top: 110%;
+	top: 130%;
 	left: 50%;
 	transform: translate(-50%,-50%);
 	text-align: center;
@@ -168,7 +168,7 @@ nav img{
 }
 	
 }.container1{
-    max-width: 5000px;
+    max-width: 6000px;
     margin: auto;
 
     overflow: auto;
@@ -237,7 +237,7 @@ nav img{
 }
 
 
-
+/**
 		.container3{
     max-width: 1200px;
     margin: auto;
@@ -282,4 +282,38 @@ nav img{
 .desc3{
     padding: 15px;
     text-align: center;
+}
+**/
+.container3 {
+  display: flex;
+  justify-content: center;
+}
+
+.image-container3 {
+  border: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+  width: 400px;
+}
+
+.image-container3 img {
+  width: 100%;
+  height: 100%;
+
+}
+
+.image-container3 p {
+  margin: 10px 0;
+  text-align: center;
+}
+
+.container1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.gallery1 {
+  margin: 0 auto;
 }
